# llm-presidential-outcome-forecasts

./: README.md  outcomes.yaml  pyproject.toml  requirements.txt  run.py
llm_forecasts/: analysis.py  config.py  gpt.py  llm.py  main.py  utils.py  validation.py
llm_forecasts/outputs/: basic_stats_20241104_012544.csv  basic_stats_20241104_013523.csv  model_comparison_results_20241104_012544.csv  model_comparison_results_20241104_013135.csv  model_comparison_table_20241104_012544.tex  model_comparison_table_20241104_013908.tex  model_comparison_table_20241104_034746.tex  model_comparison_table_20241104_035728.tex  model_comparison_table_20241104_041905.tex  model_comparison_table_20241104_042756.tex  model_comparison_table_20241104_043856.tex  model_comparison_validation_20241104_012544.csv  model_consistency_20241104_012544.csv  model_consistency_20241104_013547.csv  model_consistency_20241104_014017.csv  model_consistency_20241104_034630.csv  model_consistency_20241104_035728.csv  model_consistency_20241104_041905.csv  model_consistency_20241104_042756.csv  model_consistency_20241104_043856.csv  model_effects_20241104_012544.csv  model_effects_20241104_013552.csv  model_effects_20241104_034746.csv  model_effects_20241104_035728.csv  model_effects_20241104_041905.csv  model_effects_20241104_042756.csv  model_effects_20241104_043856.csv  model_effects_20241104_053845.csv  prediction_results_20241104_000706.csv  results_table.tex  (+12 more)
outputs/: prediction_results_20241103_235401.csv  results_table.tex
paper/: .gitignore  Makefile  README.md  main.tex  references.bib
(+11 files in other folders)
